--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="container animated bounceInRight my-5 ">
 
     <div class="text-center text-light">
-      <h1>SGPA Calculator</h1>
+      <h1>CGPA Calculator</h1>
       <p>Calulate Semeter-V SGPA </p>
     </div>
 
